--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,28 @@
-# RL
-stable-baselines3==2.3.2
-gymnasium==0.29.1
+# Deep Learning and RL
+torch>=2.0.0
+stable-baselines3>=2.0.0
+gymnasium>=0.28.0
 
-# Core scientific
-numpy>=1.26
-pandas>=2.2
-scikit-learn>=1.4
-matplotlib>=3.8
-seaborn>=0.13
+# Data Science
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
+scipy>=1.10.0
 
-# NLP / embeddings
-transformers>=4.42
-sentence-transformers>=3.0
-datasets>=2.20
-torch>=2.3
+# Data Augmentation
+ctgan>=0.11.0
 
-# Data helpers
-kagglehub>=0.2.5
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+tensorboard>=2.13.0
 
-# Optional
-ctgan>=0.7
-plotly>=5.22
+# Dimensionality Reduction
+scikit-learn>=1.3.0
+
+# NLP (if using transformers for embeddings)
+transformers>=4.30.0
+
+# Utilities
+tqdm>=4.65.0
+Pillow>=9.5.0
